# memez

./: Cargo.toml  README.md  Rocket.toml  diesel.toml  start.sh
migrations/2024-06-11-211341_create_accounts/: up.sql
migrations/2024-06-11-221523_create_memecoins/: down.sql  up.sql
migrations/2024-06-11-222250_create_threads/: up.sql
migrations/2024-06-11-222657_create_trades/: down.sql  up.sql
src/: api_models.rs  helpers.rs  lib.rs  models.rs  schema.rs
