[package]
name = "memez"
version = "0.1.0"
edition = "2021"

src = ["lib.rs"]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
bigdecimal = { version = "0.4.3", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "serde_json"] }
dotenvy = "0.15"
pg_bigdecimal = { version = "0.1.5", features = ["serde"] }
serde = {version = "1.0.193", features = ["derive"]}
serde-reflection = "0.3.6"
serde_json = "1.0.108"
rocket = "0.4.5"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates", "tera_templates"]
